# DF-MultiLingual

./: .gitignore  README.md  classes.py  denoising.py  llama3_2_3B.py  main.py  notes.md  pipeline.py  pyproject.toml  requirements.txt  speechsynthesis.py  transcript.py  utils.py  videosynthesis.py
Wav2Lip/: inference.py
colab_notebooks/: speechsynth.ipynb
examples/: llama_output.json  transcript.json
testing/: test.py  test_speech.py  test_videosynth.py
